Refactored content script

--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,25 @@
 
   "name": "NoTate",
   "description": "With this extension you will be able to annotate web pages just like you do with pdf documents",
-  "version": "1.0",
+  "version": "0.1",
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "src/popup.html"
   },
 
   "background": {
-    "page": "background.html"
+    "page": "src/background.html"
   },
 
   "permissions": [
     "tabs",
     "storage", 
     "*://*/*"
+  ],
+
+  "web_accessible_resources": [
+    "src/js/*"
   ],
 
   "content_scripts": [
@@ -29,10 +33,16 @@
       ],
       "js": [
         "src/js/lib/jquery.js", 
-        "src/js/lib/jquery.qtip.min.js", 
         "src/js/lib/jquery.ui.js", 
+        "src/js/lib/jquery.qtip.min.js", 
         "src/js/lib/underscore.js", 
         "src/js/lib/backbone.js", 
+        "src/js/lib/backbone.sync.js", 
+        "src/js/content/App.js", 
+        "src/js/content/utils/EventManager.js", 
+        "src/js/content/views/NoTateView.js", 
+        "src/js/content/views/NoteView.js", 
+        "src/js/content/collections/Notes.js", 
         "src/js/content.js"
       ]
     }
