--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "NoTate",
+  "name": "Notely",
   "description": "With this extension you will be able to annotate web pages just like you do with pdf documents",
   "version": "0.1",
 
